# Agent-Friday

./: .editorconfig  .env.example  .fridayignore  .gitattributes  .gitignore  .prettierignore  AGENT_BEST_PRACTICES.md  ARCHITECTURE.md  AgentFriday.spec  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATOR_ECONOMY_AND_FEDERATION_SPEC.md  CREDITS.md  INSTALL.md  LICENSE  NEXUS_V2_ARCHITECTURE.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v4.4.0.md  RELEASE_PLAN.md  SECURITY-AUDIT-REPORT.md  SECURITY.md  SELF.md  SELF_SUFFICIENT_FRIDAY_SPEC.md  THREAT_MODEL.md  VOICE_DEMO.md  VOICE_INTEGRATION_SPEC.md  behavioral_monitor.py  context_compressor.py  conversation_memory.py  core.py  do_commit.bat  emotional_arc.py  epistemic_engine.py  eslint.config.mjs  feature_request.md  friday_cli.py  (+29 more)
.githooks/: pre-commit  security_scan.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SECURITY_POLICY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  tests.yml
assets/: holographic.css  icon-manifest.json
dev/: autoresearch.md  fix-tests.md  fix-type-errors.md  optimize-bundle.md  optimize-context.md  optimize-prompts.md  optimize-voice.md  regression-hunt.md  tune-calibration.md  tune-delegation.md  tune-memory.md
docs/: ADVERSARIAL_REVIEW_v5.md  API.md  ARCHITECTURE.md  ARCHITECTURE_INVENTORY.md  BACKGROUND_NETWORK.md  COMPETITIVE_MATRIX.md  CONFIGURATION.md  DUAL_ROLE_ARCHITECTURE_SPEC.md  EXEC_SUMMARY.md  FRIDAY_CODEBASE_STORM_REPORT.md  INSTALLATION.md  RELEASE_NOTES_v5.0.md  SITE_VS_REPO_DISCREPANCIES.md  SKILLS.md  SOCRATIC-FORGE.md  SUPER_AGENT_BUILD_SPEC.md  TIER2_NEMO_VOICE.md
docs/architecture/: README.md  external-dependencies.md  ipc-channel-map.md
optional-skills/: daily-briefing.yaml  deep-research.yaml  job-eval.yaml
release/: create-release.ps1  push-and-build.ps1  release-notes.md  update-release.ps1
routes/: ambient.py  calendar.py  chat.py  code.py  connectors.py  contacts.py  context.py  control.py  core_routes.py  costs.py  creations.py  creative_pipeline.py  defederation.py  ext_security.py  federation.py  finance_health.py  futurespeak.py  google.py  hooks.py  insights.py  jobs.py  messages.py  news.py  notifications.py  ownership.py  platform.py  scheduler.py  skills.py  tasks.py  todos.py  voice.py  voice_context.py  wiki.py  workflows.py  workspace_studio.py
scripts/: fix-libsodium-esm.js  friday_google_connect.py  gemini_css_review.py  gen_icons.py  gen_test.py  generate-icons.js  install.bat  install.ps1  install.sh
services/: agent.py  ambient_awareness.py  calendar_engine.py  capability_router.py  code_engine.py  compaction.py  connectors.py  content_credentials.py  content_policies.py  context_injection.py  cost_meter.py  creations.py  creative_engine.py  creative_memory.py  creative_pipeline.py  credential_store.py  defederation.py  demo_mode.py  distributions.py  economy.py  egress_gate.py  extension_security.py  federation.py  federation_transport.py  futurespeak.py  google_accounts.py  hints.py  introspection.py  local_voice.py  marketplace.py  misc_engine.py  model_catalog.py  model_router.py  moderation.py  music_engine.py  nemo_voice.py  news_engine.py  notifications.py  ownership.py  predictive_workspaces.py  (+14 more)
skills/application_engine/: SKILL.md  config.yaml  engine.py
skills/job_scanner/: SKILL.md  config.yaml  scanner.py
skills/ofw_monitor/: SKILL.md  config.yaml  monitor.py
socratic-roadmaps/: 00-SOCRATIC-METHODOLOGY.md  01-GAP-MAP.md  02-GAP-MAP.md  03-GAP-MAP.md  04-GAP-MAP.md  05-GAP-MAP.md  06-GAP-MAP.md  MASTER-PLAN.md  ORCHESTRATOR-S2.md  ORCHESTRATOR-S3.md  ORCHESTRATOR-S4.md  ORCHESTRATOR-S5.md  ORCHESTRATOR-S6.md  ORCHESTRATOR.md  Track-A-The-Conductor.md  Track-B-The-Sandbox.md  Track-C-The-Memory-Weaver.md
socratic-roadmaps/contracts/: audio-capture.md  briefing-delivery.md  cloud-gate.md  confidence-assessor.md  context-graph.md  embedding-pipeline.md  execution-delegate.md  file-search.md  hardware-profiler.md  image-understanding.md  intelligence-engine.md  intelligence-router.md  live-context-bridge.md  llm-client.md  model-orchestrator.md  ollama-lifecycle.md  ollama-provider.md  profile-manager.md  safety-pipeline.md  screen-context.md  setup-wizard.md  system-monitor.md  tier-recommender.md  tool-registry.md  transcription-pipeline.md  tts-engine.md  vision-circle.md  vision-provider.md  voice-circle.md  voice-profile.md  whisper-provider.md
socratic-roadmaps/evolution/: sprint-1-review.md  sprint-2-review.md  sprint-3-review.md  sprint-4-review.md  sprint-5-review.md  sprint-6-review.md
socratic-roadmaps/journals/: track-a-phase-1.md  track-a-phase-2.md  track-a-phase-3.md  track-b-phase-1.md  track-b-phase-2.md  track-b-phase-3.md  track-c-phase-1.md  track-c-phase-2.md  track-c-phase-3.md  track-d-phase-1.md  track-d-phase-2.md  track-d-phase-3.md  track-e-phase-1.md  track-e-phase-2.md  track-e-phase-3.md  track-f-phase-1.md  track-g-phase-1.md  track-g-phase-2.md  track-g-phase-3.md  track-h-phase-1.md  track-h-phase-2.md  track-h-phase-3.md  track-i-phase-1.md  track-j-phase-1.md  track-j-phase-2.md  track-j-phase-3.md  track-k-phase-1.md  track-k-phase-2.md  track-k-phase-3.md  track-l-phase-1.md  track-m-phase-1.md  track-m-phase-2.md  track-m-phase-3.md  track-n-phase-1.md  track-o-phase-1.md  track-o-phase-2.md  track-o-phase-3.md  track-p-phase-1.md  track-p-phase-2.md  track-p-phase-3.md
socratic-roadmaps/track-a/: phase-1-the-score-reader.md  phase-2-the-baton.md  phase-3-the-performance.md
socratic-roadmaps/track-b/: phase-1-the-workbench.md  phase-2-the-guardrails.md  phase-3-the-craftsman.md
tests/: MANUAL_TEST_PROCEDURES.md  README.md  SOCRATIC-VALIDATION-REPORT.md  conftest.py  friday.spec.ts  friday_ui_full.spec.ts  local-conversation.test.ts  mcp_stub_server.py  test_egress_adversarial.py  test_friday_ui.py  test_mcp_client.py  test_vault_at_rest.py  test_vault_crypto.py
tools/: agent-bridge.py
ui_parts/: app.html  head.html  styles_and_scene.html
vibe-mode/: README.md
(+879 files in other folders)
