[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-friday"
version = "4.5.0"
description = "Agent Friday by FutureSpeak.AI — a sovereign, provider-agnostic desktop AI agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FutureSpeak.AI" }]

# ── Core dependencies ────────────────────────────────────────────────────────
# Cross-platform, always required to run the server + UI + settings + the default
# Anthropic/Gemini provider paths. NO Windows-only packages here (they live in the
# [windows] extra) so `pip install -e .` works cleanly on macOS and Linux too.
dependencies = [
    "flask>=3.0",
    "flask-sock>=0.7",
    "requests>=2.31",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "tzdata>=2024.1",
    "rich>=13.0",
    "colorama>=0.4",
    "cryptography>=44",
    "psutil>=5.9",
    "anthropic>=0.40",
    "google-genai>=1.0",
]

# ── Optional capability groups — install only what you need ───────────────────
[project.optional-dependencies]
# Live voice + creative (image/video) both ride the core google-genai SDK; these
# extras add the trimmings each capability needs beyond it.
voice = ["pyttsx3>=2.90"]              # offline TTS fallback when Gemini is unreachable
# Tier-1 LOCAL voice (the DEFAULT engine): faster-whisper ASR + Piper TTS, CPU
# only, NO torch/CUDA. ~150-300MB of wheels; the ASR/TTS model checkpoints
# download lazily on first voice activation, not at install. Safe for [all].
voice-local-lite = [
    "faster-whisper>=1.0",   # CTranslate2 backend, CPU INT8 ASR (no torch)
    "piper-tts>=1.2",        # ONNX TTS, ~30MB/voice
    "onnxruntime>=1.17",     # CPU inference for Piper (+ optional Silero VAD)
]
# Tier-2 GPU premium voice (NVIDIA NeMo). HEAVY (torch-CUDA + NeMo, 3-6GB) and
# version-fragile — opt-in ONLY, NEVER in [all]. torch+CUDA must be installed via
# a dedicated installer step with the correct CUDA index URL, not a blind pip dep.
voice-local-gpu = [
    "nemo_toolkit[asr,tts]>=2.6",
]
creative = ["pillow>=10.0"]            # image post-processing / thumbnails
# Timeline composition (Layer 1 §3). imageio-ffmpeg bundles an ffmpeg binary so a
# clean `pip install agent-friday[compose]` "just works" on Windows with no system
# install; timeline_engine falls back to a system ffmpeg on PATH when present.
compose = ["imageio-ffmpeg>=0.5"]
# Provenance embedding (Layer 2 §8) — write the signed C2PA manifest INTO the
# file (ID3/XMP). The signed sidecar + hash-chained ledger work without this; the
# extra just makes the credential travel inside the artifact too.
provenance = ["mutagen>=1.47"]
google = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0"]  # Gmail/Calendar/Drive
local = ["sentence-transformers>=2.2", "chromadb>=0.5"]  # on-device embeddings + memory (Ollama itself is an external binary)
compression = ["headroom-ai[all]>=0.22"]  # context compression (degrades to passthrough if absent)
federation = ["pynacl>=1.5"]           # Ed25519 attestation + source-trust federation
# Privacy / security extras — degrade gracefully when absent
# presidio-analyzer adds Layer 2 NER classification to the egress gate
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
# keyring stores the HMAC governance key in the OS credential store
# (Windows Credential Manager, macOS Keychain, Secret Service on Linux)
keyring = ["keyring>=24.0"]
windows = ["pyautogui>=0.9", "pynput>=1.7", "pillow>=10.0"]  # computer control + global kill-switch + tray icon
pdf = ["pdfplumber>=0.10"]  # PDF text extraction (routes/core_routes.py)
all = [
    "pyttsx3>=2.90",
    "pillow>=10.0",
    "imageio-ffmpeg>=0.5",
    "mutagen>=1.47",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "sentence-transformers>=2.2",
    "chromadb>=0.5",
    "headroom-ai[all]>=0.22",
    "pynacl>=1.5",
    "pdfplumber>=0.10",
    # Computer control + kill-switch: Windows-only (needs X11 headers on Linux)
    "pyautogui>=0.9; sys_platform == 'win32'",
    "pynput>=1.7; sys_platform == 'win32'",
    # Tier-1 local voice is cheap + universal, so it rides [all]. The heavy GPU
    # voice group (voice-local-gpu) is deliberately EXCLUDED — opt-in only.
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "onnxruntime>=1.17",
]

[project.scripts]
friday = "agent_friday.cli:main"

# ── Packaging (src layout) ────────────────────────────────────────────────────
# All application code lives under src/agent_friday/. An editable install
# (`pip install -e .`) makes the `agent_friday` package importable everywhere
# without sys.path manipulation. The `friday` CLI entry point launches the server.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
